# ECE_5532_Final_Project

./: .gitmodules  CMakeLists.txt  README.md  package.xml  two_audibot_path_following.ref
Presentation, Report, and Video/: Project GitHub Link  Video Presentation Link
URDF/: audibot.urdf.xacro  audibot_mod.urdf.xacro
cfg/: follow_camera.cfg
launch/: level_1.launch  level_2.launch  level_3.launch  spawn_audibot.launch  two_audibot_path_following.launch  two_audibot_road_world.launch
level_1/launch/: level_1.launch
src/: GPS.cpp  camera_nav.cpp  follow_camera.cpp  follow_twist_override.cpp  lidar.cpp  lidar_nav.cpp
urdf/: audibot_gps_and_camera_and_lidar.urdf.xacro  audibot_sensors_mod.urdf.xacro
yaml/: global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml
